--- a/Views/Projects/New.cshtml
+++ b/Views/Projects/New.cshtml
@@ -35,6 +35,9 @@
 
         <br />
 
-        <button class="btn btn-success" type="submit">Save Project!</button>
+        <div class="d-flex justify-content-between" style="width:25%">
+            <a href="/Projects/Index" class="btn btn-danger">Cancel</a>
+            <button class="btn btn-success" type="submit">Save Project!</button>
+        </div>
     }
 </div>
