--- a/Views/Projects/Admin.cshtml
+++ b/Views/Projects/Admin.cshtml
@@ -35,7 +35,7 @@
 
 <div class="d-flex justify-content-center">
     <div class="d-flex justify-content-evenly" style="width: 80%">
-        <a class="btn btn-outline-success" href="/Tasks/New">
+        <a class="btn btn-outline-success" href="/Tasks/New/?projid=@Model.Id">
             <i class="bi bi-clipboard-plus"></i>
             New Task
         </a>
