--- a/Views/Tasks/New.cshtml
+++ b/Views/Tasks/New.cshtml
@@ -27,7 +27,7 @@
     <br/>
 
     @Html.Label("Description", "Description")
-    @Html.TextArea("Description", null, new {@class = "form-control"})
+    @Html.TextArea("Description", null, new {@class = "summernote"})
     @Html.ValidationMessage("Description", null, new { @class = "text-danger" })
     <br/>
 
