--- a/Views/Projects/Admin.cshtml
+++ b/Views/Projects/Admin.cshtml
@@ -26,14 +26,6 @@
 <br />
 
 <div class="d-flex justify-content-center">
-    <span style="width: 50%">
-        @Model.Description
-    </span>
-</div>
-
-<br />
-
-<div class="d-flex justify-content-center">
     <div class="d-flex justify-content-evenly" style="width: 80%">
         <a class="btn btn-outline-success" href="/Tasks/New/?projid=@Model.Id">
             <i class="bi bi-clipboard-plus"></i>
@@ -75,4 +67,12 @@
             Delete project
         </a>
     </div>
+</div>
+
+<br />
+
+<div class="d-flex justify-content-center">
+    <span style="width: 50%">
+        @Html.Raw(Model.Description)
+    </span>
 </div>
