--- a/Views/Tasks/Show.cshtml
+++ b/Views/Tasks/Show.cshtml
@@ -35,7 +35,7 @@
 
                     <h3 class="card-title @ViewBag.AlertStyle py-3 px-3 rounded-2">@Model.Title</h3>
                     <br/>
-                    <div class="card-text">@Model.Description</div>
+                    <div class="card-text">@Html.Raw(Model.Description)</div>
                     <br />
                     <div class="text-center">
                         <embed src="@Model.Multimedia" style="max-height: 700px; min-height: 500px; min-width: 500px;"/>
@@ -141,48 +141,54 @@
 
 <br/>
 
-@foreach (var comm in Model.Comments)
+@if (Model.Comments != null)
 {
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2"></div>
+    @foreach (var comm in Model.Comments)
+    {
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
 
-            <div class="col-md-8">
+                <div class="col-md-8">
 
-                <div>
-                    <p>@comm.Content</p>
-                    <small>@comm.CreatedDate</small>
-                    <strong><i class="bi bi-person"></i>@comm.User.UserName</strong>
+                    @if (@comm.User != null)
+                    {
+                        <div>
+                            <p>@Html.Raw(comm.Content)</p>
+                            <small>@comm.CreatedDate</small>
+                            <strong><i class="bi bi-person"></i>@comm.User.UserName</strong>
+                        </div>
+                    }
+
+                    @if (ViewBag.CurrentUser == comm.UserId || ViewBag.IsAdmin)
+                    {
+                        <br/>
+
+                        <div class="d-flex">
+
+                            @if (ViewBag.CurrentUser == comm.UserId)
+                            {
+                                <div>
+                                    <a class="btn btn-outline-secondary" href="/Comments/Edit/@comm.Id"><i class="bi bi-pencil-square"></i> Edit</a>
+                                </div>
+                            }
+
+                            <div>
+                                <form method="post" action="/Comments/Delete/@comm.Id">
+                                    <button class="btn btn-outline-danger" type="submit"><i class="bi bi-trash"></i> Delete</button>
+                                </form>
+                            </div>
+                        </div>
+                    }
+
+                    <hr />
+
                 </div>
 
-                @if (ViewBag.CurrentUser == comm.UserId || ViewBag.IsAdmin)
-                {
-                    <br/>
-
-                    <div class="d-flex">
-
-                        @if (ViewBag.CurrentUser == comm.UserId)
-                        {
-                            <div>
-                                <a class="btn btn-outline-secondary" href="/Comments/Edit/@comm.Id"><i class="bi bi-pencil-square"></i> Edit</a>
-                            </div>
-                        }
-
-                        <div>
-                            <form method="post" action="/Comments/Delete/@comm.Id">
-                                <button class="btn btn-outline-danger" type="submit"><i class="bi bi-trash"></i> Delete</button>
-                            </form>
-                        </div>
-                    </div>
-                }
-
-                <hr />
-
+                <div class="col-md-2"></div>
             </div>
-
-            <div class="col-md-2"></div>
         </div>
-    </div>
+    }
 }
 
 <div class="container">
@@ -198,7 +204,7 @@
                         <input type="hidden" name="TaskId" value="@Model.Id" />
 
                         <label>Comment</label>
-                        <textarea class="form-control" name="Content"></textarea>
+                        <textarea class="summernote" name="Content"></textarea>
                         @Html.ValidationMessage("Content", null, new { @class = "text-danger" })
                         <br/>
 
